feat: add pokemon routing
move routing from app to pokemons module

--- a/src/app/pokemons/pokemons/pokemons.component.html
+++ b/src/app/pokemons/pokemons/pokemons.component.html
@@ -1,6 +1,6 @@
 <p>pokemons works!</p>
 <div *ngIf="pokemons$ | async as pokemons">
-  <div *ngFor="let pokemon of pokemons">
+  <div *ngFor="let pokemon of pokemons" routerLink="/pokemon">
     {{pokemon.name }}
   </div>
 </div>
