--- a/src/app/pokemons/pokemon-card/pokemon-card.component.html
+++ b/src/app/pokemons/pokemon-card/pokemon-card.component.html
@@ -1,13 +1,15 @@
 <mat-card class="card">
 
   <mat-card-header>
-    <mat-card-title>{{pokemonName}}</mat-card-title>
-    <mat-card-subtitle>{{pokemonType}}</mat-card-subtitle>
+    <mat-card-title>{{pokemon.name}}</mat-card-title>
+    <mat-card-subtitle>{{types}}</mat-card-subtitle>
+    <a [routerLink]="pokemon.name" >
+      <img mat-card-sm-image [src]="pokemon.sprites.front_default" alt="Photo of pokemon" width="25px">
+    </a>
   </mat-card-header>
 
-  <img mat-card-image [src]="imgSrc" alt="Photo of pokemon">
 
   <mat-card-actions>
-    <button mat-button>add to pokedox</button>
+    <button mat-stroked-button>add to pokedox</button>
   </mat-card-actions>
 </mat-card>
