--- a/src/app/pokemons/pokemon-card/pokemon-card.component.html
+++ b/src/app/pokemons/pokemon-card/pokemon-card.component.html
@@ -1,7 +1,7 @@
 <mat-card class="card">
 
   <mat-card-header>
-    <mat-card-title>{{pokemon.name}}</mat-card-title>
+    <mat-card-title><span>{{pokemon.id}} </span>{{pokemon.name}}</mat-card-title>
     <mat-card-subtitle>{{types}}</mat-card-subtitle>
     <a [routerLink]="pokemon.name" >
       <img mat-card-sm-image [src]="pokemon.sprites.front_default" alt="Photo of pokemon" width="25px">
