--- a/src/app/pokedox/components/pokedox/pokedox.component.html
+++ b/src/app/pokedox/components/pokedox/pokedox.component.html
@@ -1,1 +1,7 @@
-<p>pokedox works!</p>
+<div class="card-container">
+  <div *ngFor="let pokemonsss of pokemons$" >
+    <div *ngIf="pokemonsss | async as pokemon" >
+      <pk-pokemon-card *ngIf="true" [pokemon]="pokemon" [inPokedox]="true"></pk-pokemon-card>
+    </div>
+  </div>
+</div>
